# PESlice

./: .gitignore  README.md  pyproject.toml
src/peslice/: __init__.py
src/peslice/complexity/: __init__.py  chebyshev_complexity.py  chebyshev_model.py  mac_complexity.py
src/peslice/core/: __init__.py  base_slice.py  circular_slice.py  linear_slice.py
src/peslice/utils/: __init__.py  geometry.py  graphs.py
