[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PESlice"
version = "0.1.3"
readme = { file = "README.md", content-type = "text/markdown" }
description = "Slice high-dimensional PES, evaluate with NN models, and analyse function complexities."
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Arun Spencer" },
  { name = "John Gardner" }
]

dependencies = [
  "numpy<2",
  "scipy",
  "torch",
  "ase",
  "graph-pes",
  "scikit-learn",
  "jaxtyping",
]

[project.urls]
Repository = "https://github.com/arunspencer/PESlice"
